# mdebase

./: CMakeLists.txt  README.md  wizard.sh.in
include/: config.h.in
mdm/: CMakeLists.txt  config.c  login.c  main.c  mdm.h  mdmrc.in  pam  xserver.c
milkwm/: CMakeLists.txt  config.c  main.c  milkwm.h  milkwmrc.in  wm.c  xserver.c
mpanel/: CMakeLists.txt  main.c  module.c  mpanel.h  mpanelrc.in
mpanel/launcher/: CMakeLists.txt  module.c
mpanel/separator/: CMakeLists.txt  module.c
mpanel/startbutton/: CMakeLists.txt  module.c
mpanel/taskbar/: CMakeLists.txt  module.c
mpanel/time/: CMakeLists.txt  module.c
startmde/: CMakeLists.txt  mde.desktop  startmde.in
